--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
   <body>
     <header>
       <h1>Bookshelf</h1>
+      <!-- <button class="btn" id="btn">+</button> -->
     </header>
     <main>
-      <div class="container">
+      <div class="hinzufuegen" id="add">
+        <h4>Add Books</h4>
+        <input type="text" placeholder="Title" />
+        <input type="text" placeholder="Author" />
+        <input type="text" placeholder="Pages" />
+        <input type="checkbox" /> Read?
+        <button class="btn" id="btn">Add Book</button>
+      </div>
+      <div class="container" id="buecher">
         <p class="titel">Der Herr der Ringe</p>
         <p class="autor">J.R.R. Tolkin</p>
         <p class="seiten">Pages 4879</p>
