--- a/index.html
+++ b/index.html
@@ -3,30 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- Icon -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Projekt - Bookshelf</title>
   </head>
   <body>
     <header>
       <h1>Bookshelf</h1>
-      <!-- <button class="btn" id="btn">+</button> -->
     </header>
     <main>
       <div class="hinzufuegen" id="add">
         <h4>Add Books</h4>
-        <input type="text" placeholder="Title" />
-        <input type="text" placeholder="Author" />
-        <input type="text" placeholder="Pages" />
-        <input type="checkbox" /> Read?
+        <input class="titel" id="titel" type="text" placeholder="Title" />
+        <input class="autor" id="autor" type="text" placeholder="Author" />
+        <input class="seiten" id="seiten" type="number" placeholder="Pages" />
+        <input class="gelesen" id="gelesen" type="checkbox" /> Read?
         <button class="btn" id="btn">Add Book</button>
       </div>
-      <div class="container" id="buecher">
-        <p class="titel">Der Herr der Ringe</p>
-        <p class="autor">J.R.R. Tolkin</p>
-        <p class="seiten">Pages 4879</p>
-        <p class="gelesen">Read</p>
-      </div>
+      <section class="bookShelf">
+        <!-- <div class="container" id="buecher">
+          <p class="titel">a</p>
+          <p class="autor">a</p>
+          <p class="seiten">1</p>
+          <p class="gelesen">y</p>
+          <button>
+            <span id="iconDelete" class="material-symbols-outlined iconDelete">
+              delete
+            </span>
+          </button>
+          <button>
+            <span id="iconRead" class="material-symbols-outlined iconRead">
+              local_library
+            </span>
+          </button>
+        </div> -->
+      </section>
     </main>
     <script type="text/javascript" src="main.js"></script>
   </body>
