--- a/index.html
+++ b/index.html
@@ -25,24 +25,7 @@
         <input class="gelesen" id="gelesen" type="checkbox" /> Read?
         <button class="btn" id="btn">Add Book</button>
       </div>
-      <section class="bookShelf">
-        <!-- <div class="container" id="buecher">
-          <p class="titel">a</p>
-          <p class="autor">a</p>
-          <p class="seiten">1</p>
-          <p class="gelesen">y</p>
-          <button>
-            <span id="iconDelete" class="material-symbols-outlined iconDelete">
-              delete
-            </span>
-          </button>
-          <button>
-            <span id="iconRead" class="material-symbols-outlined iconRead">
-              local_library
-            </span>
-          </button>
-        </div> -->
-      </section>
+      <section class="bookShelf"></section>
     </main>
     <script type="text/javascript" src="main.js"></script>
   </body>
